# marblz

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake-linux.yml  cmake-multi-platform.yml
engine/: Camera.cpp  Camera.h  Events.cpp  Events.h  Window.cpp
engine/assets/: Image.hpp  ImageManager.cpp  ImageManager.hpp
engine/gfx/: Geometry.h  Primitives.h  Shader.cpp  Texture.cpp  Texture.h
game/: Camera.cpp  Camera.h  ChunkBuilder.cpp  ChunkBuilder.h  Events.cpp  Events.h  Window.cpp  Window.h
game/assets/: ImageManager.cpp
game/gfx/: Geometry.cpp  Geometry.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
gfx/: IRenderable.cpp  IRenderable.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  WindowSystem.cpp  WindowSystem.hpp
res/: Image.hpp  ImageManager.cpp  ImageManager.hpp
utils/: in_between.h
